# fea-converge

./: .gitignore  .gitmodules  CLAUDE.md  CODE_REVIEW_SUMMARY.md  CONTRIBUTING.md  CRITICAL_REVIEW.md  PROJECT_SCOPE.md  README.md  RESEARCH.md  SMITH_BUILD_STATUS.md  build-smith-cmake-direct.sh  build-smith-docker.sh  build-smith-lc.sh  build-smith-simple.sh  build_smith.sh  create_spack_mirror.sh  docker-build-smith.sh  example_template.lua  pyproject.toml  run_model  run_model_docker.sh  run_model_lc  smith_ml_optimizer.py
config/: CONTRIBUTING.md  IMPLEMENTATION_PLAN.md  README.md  pyproject.toml
config/src/config_optimizer/acquisition/: config_acquisition.py
config/src/config_optimizer/core/: controller.py
config/src/config_optimizer/monitoring/: violation_monitor.py
config/src/config_optimizer/solvers/: black_box_solver.py
config/src/config_optimizer/utils/: beta_schedule.py
config/src/config_optimizer/visualization/: plots.py
config/tests/unit/: test_beta_schedule.py  test_constraints.py
fr-bo/: IMPLEMENTATION_PLAN.md
fr_bo/: CONTRIBUTING.md  README.md  __init__.py  acquisition.py  early_termination.py  gp_models.py  objective.py  optimizer.py  parameters.py  pyproject.toml  simulator.py  synthetic_data.py  visualization.py
fr_bo/examples/: basic_optimization.py
fr_bo/tests/: conftest.py  test_acquisition.py  test_gp_models.py  test_integration.py  test_parameters.py
future_methods/: README.md
future_methods/fr-bo/: README.md
future_methods/gp-classification/: README.md
future_methods/shebo/: README.md
gp-classification/: IMPLEMENTATION_PLAN.md  STATUS.md  main.py
gp-classification/examples/: basic_optimization.py
gp-classification/src/gp_classification/: __init__.py  acquisition.py  data.py  mock_solver.py  models.py  optimizer.py  use_cases.py
gp-classification/tests/: test_integration.py  test_models.py  test_optimizer.py
methods/: SMITH_INTEGRATION.md  smith_runner.py
methods/config/examples/: basic_example.py  run_smith_models.py  smith_integration_example.py
methods/config/src/config_optimizer/: __init__.py
methods/config/src/config_optimizer/models/: gp_models.py
methods/config/src/config_optimizer/utils/: beta_schedule.py  constants.py  constraints.py  logging_config.py  sampling.py
methods/config/tests/integration/: test_config_optimizer.py
methods/config/tests/unit/: test_edge_cases.py
methods/fr_bo/: TEST_FIXES.md  TEST_VALIDATION_SUMMARY.md  __init__.py  gp_models.py  multi_task.py  risk_scoring.py  simulator.py  utils.py
methods/fr_bo/examples/: run_smith_models.py  smith_integration_example.py
methods/fr_bo/tests/: __init__.py  test_integration.py  test_parameters.py
methods/gp-classification/: CONTRIBUTING.md  README.md  pyproject.toml
methods/gp-classification/examples/: run_smith_models.py
methods/gp-classification/src/gp_classification/: data.py  mock_solver.py  use_cases.py  visualization.py
methods/gp-classification/tests/: test_data.py  test_mock_solver.py
methods/shebo/: CRITICAL_REVIEW.md
methods/shebo/examples/: run_smith_models.py  simple_optimization.py
methods/shebo/shebo/: __init__.py
methods/shebo/shebo/core/: __init__.py  constraint_discovery.py  surrogate_manager.py
methods/shebo/shebo/models/: __init__.py  convergence_nn.py
methods/shebo/shebo/utils/: black_box_solver.py
methods/shebo/tests/: test_constraint_discovery.py  test_correctness.py
models/: README.md
models/block-on-slab/: CMakeLists.txt
models/concentric-spheres/: README.md  concentric_spheres.cpp
models/deep-indentation/: CMakeLists.txt  deep_indentation.cpp
models/die-on-slab/: CMakeLists.txt  README.md  die_on_slab.cpp
models/hemisphere-twisting/: CMakeLists.txt  hemisphere_twisting.cpp
models/sphere-in-sphere/: CMakeLists.txt  README.md  sphere_in_sphere.cpp
models/stacked-blocks/: README.md
shebo/: .gitignore  CONTRIBUTING.md  CRITICAL_REVIEW.md  DEVELOPMENT.md  FIXES.md  IMPLEMENTATION_PLAN.md  README.md  pyproject.toml  requirements-lock.txt.example
shebo/shebo/core/: acquisition.py  optimizer.py  surrogate_manager.py
shebo/shebo/models/: convergence_nn.py  ensemble.py
shebo/shebo/utils/: __init__.py  preprocessing.py  synthetic_data.py
shebo/shebo/visualization/: __init__.py  plots.py
shebo/tests/: conftest.py  test_black_box_solver.py  test_ensemble.py  test_optimizer.py
smith-models/block-on-slab/: README.md  block_on_slab.cpp
smith-models/concentric-spheres/: CMakeLists.txt
smith-models/deep-indentation/: CMakeLists.txt  README.md
smith-models/hemisphere-twisting/: CMakeLists.txt  README.md
smith-models/hollow-sphere-pinching/: CMakeLists.txt  README.md  hollow_sphere_pinching.cpp
smith-models/stacked-blocks/: CMakeLists.txt  stacked_blocks.cpp
tests/: __init__.py  test_comprehensive_integration.py  test_gp_models.py  test_integration.py  test_objective.py  test_parameters.py  test_simulator.py  test_synthetic_data.py
