[project]
name = "fr-bo"
version = "0.2.0"
description = "Failure-Robust Bayesian Optimization for FEA Convergence"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0.0",
    "botorch>=0.9.0",
    "gpytorch>=1.11",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "ax-platform>=0.3.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "plotly>=5.0.0",
    "scikit-learn>=1.3.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "ruff>=0.0.285",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# Modules at package root level
py-modules = [
    "optimizer",
    "gp_models",
    "acquisition",
    "multi_task",
    "early_termination",
    "risk_scoring",
    "visualization",
    "synthetic_data",
    "simulator",
    "objective",
    "parameters",
    "utils"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']

[tool.ruff]
line-length = 100
target-version = "py39"
